fix css overflow y : hidden instead of scroll

--- a/Website/styles/default.css
+++ b/Website/styles/default.css
@@ -22,7 +22,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #f5ebeb;
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     background-image: url("../images/lists.jpg");
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
